--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="contact_menu__mail">mail@cps.com</div>
           <div class="contact_menu_footer__phone">8 800 890 8900</div>
           <div class="mobile-menu__button_language">
-            <button class="button_language__button button">RU</button>
+            <button class="button_language__button button active">RU</button>
             <button class="button_language__button button">EN</button>
             <button class="button_language__button button">CH</button>
           </div>
